# avito-parser

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  techstack.md  techstack.yml
Avito/: detail.py  links.py  main.py  proxies.py  request.py
avito/: avitoban.py  pipelines.py  settings.py
avito/site/: phone.py
avito/spiders/: avitoproducts.py
